# trading-simulator

./: .gitignore  ARCHITECTURE_DOC_SUMMARY.txt  Cargo.toml  GUIDE_SUMMARY.txt  PHASE2-SUMMARY.md  PHASE3-SUMMARY.md  PHASE4_SUMMARY.txt  README.md  WEB_APP_ARCHITECTURE.md  WEB_APP_EXPANSION_PLAN.md  trading-system-roadmap.md
docs/: README.md
docs/architecture/: 01-overview.md  02-strategy-integration.md  03-event-system.md
docs/decisions/: 001-rust-2021.md  002-engine-core-naming.md  003-circular-buffer.md  004-subprocess-over-ffi.md  005-runner-based-architecture.md
docs/guides/: binance-setup.md  getting-started.md  lua-strategy-guide.md
engine-core/: Cargo.toml
engine-core/examples/: indicators_demo.rs  lua_strategy_demo.rs  multi_symbol_engine_demo.rs  state_machine_demo.rs
engine-core/src/: error.rs  events.rs  lib.rs  main.rs
engine-core/src/config/: mod.rs
engine-core/src/indicators/: mod.rs  ocaml.rs
engine-core/src/market_data/: mod.rs  tests.rs  window.rs
engine-core/src/runner/: config.rs  engine.rs  mod.rs  snapshot.rs  stats.rs
engine-core/src/sources/: binance.rs  mod.rs  simulated.rs
engine-core/src/state_machine/: action.rs  context.rs  mod.rs  position.rs  state.rs
engine-core/src/storage/: mod.rs
engine-core/src/strategy/: lua_api.rs  mod.rs
engine-core/tests/: binance_integration.rs  data_pipeline_integration.rs  indicator_verification.rs  lua_strategy_integration.rs  market_data_integration.rs  runner_integration.rs
lua-strategies/: test_strategy.lua
lua-strategies/examples/: ema_crossover.lua  range_breakout.lua  rsi_mean_reversion.lua
ocaml-indicators/: dune-project  indicators.opam
ocaml-indicators/lib/: c_stubs.c  dune  ffi.ml
ocaml-indicators/src/: dune  indicators.ml  indicators.mli
ocaml-indicators/test/: dune  test_indicators.ml
web-backend/: BACKEND_PLAN.md  Cargo.toml  README.md
web-backend/src/: error.rs  lib.rs  main.rs  state.rs
web-backend/src/routes/: engine.rs  health.rs  mod.rs  runners.rs  strategies.rs
web-backend/src/websocket/: mod.rs
web-frontend/: README.md  package-lock.json  package.json
web-frontend/src/: App.tsx
web-frontend/src/components/: AddRunnerForm.tsx  RunnerListTable.tsx
web-frontend/src/hooks/: useApi.ts
web-frontend/src/pages/: Dashboard.tsx  RunnerDetail.tsx
web-frontend/src/services/: api.ts
web-frontend/src/types/: api.ts
