[workspace]
resolver = "2"
members = [
    "engine-core",
    "web-backend",
]

# Shared workspace dependencies for version consistency
[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
