[package]
name = "trading-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# WebSocket for market data
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2.5"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
toml = "0.8"
config = "0.14"

# Random for SimulatedFeed
rand = "0.8"

# Lua integration
mlua = { version = "0.9", features = ["lua54", "send", "serialize"] }

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "trading_engine"
path = "src/lib.rs"

[[bin]]
name = "trading-engine"
path = "src/main.rs"
