[package]
name = "trading-web-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
trading-engine = { path = "../engine-core" }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = "1.0"

# Logging
log = { workspace = true }
env_logger = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time utilities
chrono = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
